Add support for ESP32-S2 #250

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -122,12 +122,14 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 ; -- The Arduino ESP32 v2.0.1 with 3 available flash sizes:
 [arduino_esp32_v2]
 framework = arduino
-platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
-platform_packages =
-    ;framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#mem-optimized
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.1
-    ;framework-arduinoespressif32 @ https://github.com/marcovannoord/arduino-esp32.git#idf-release/v4.0
-    ;toolchain-xtensa32 @ 3.80200.200512
+;platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
+platform                    = https://github.com/platformio/platform-espressif32.git#feature/arduino-idf-master
+platform_packages           = framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/2.0.1/framework-arduinoespressif32-release_IDF4.4.tar.gz
+                              platformio/tool-esptoolpy @ https://github.com/tasmota/esptool/releases/download/v3.2/esptool-v3.2.zip
+    ;;framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#mem-optimized
+    ;framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.1
+    ;;framework-arduinoespressif32 @ https://github.com/marcovannoord/arduino-esp32.git#idf-release/v4.0
+    ;;toolchain-xtensa32 @ 3.80200.200512
 board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
