--- a/user_setups/esp32s2/esp32s2-metro.ini
+++ b/user_setups/esp32s2/esp32s2-metro.ini
@@ -1,11 +1,11 @@
 ;***************************************************;
-;       HUZZAH32 ESP32 with Featherwing TFT 2.4"    ;
-;               - HUZZAH32 esp32 board              ;
-;               - ili9341 TFT Featherwing 2.4"      ;
-;               - STMPE610 touch controller         ;
+;     Metro ESP32-S2 with Waveshare Touch Shield    ;
+;         - Adafruit Metro ESP32-S2 board           ;
+;         - ili9486 Waveshare TFT Touch Shield      ;
+;         - XPT2046 touch controller                ;
 ;***************************************************;
 
-[env:esp32s2-featherwing-24]
+[env:esp32s2-metro-ili9486]
 extends = esp32s2_4mb_v2
 board = esp32s2
 
@@ -16,7 +16,7 @@ build_flags =
     -D USE_HSPI_PORT
 
 ;region -- TFT_eSPI build options ------------------------
-    -D ILI9341_DRIVER=1
+    -D ILI9486_DRIVER=1
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
     -D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
@@ -25,22 +25,36 @@ build_flags =
     -D SPI_READ_FREQUENCY=20000000
     ;-D USER_SETUP_LOADED=1
     -D LGFX_USE_V1=1
-    -D TOUCH_DRIVER=0x0610 ;STMPE610
-    -D TFT_MISO=12 ;37
-    -D TFT_MOSI=13 ;35
-    -D TFT_SCLK=14 ;36
-    -D TFT_DC=5
-    -D TFT_CS=6
-    -D TFT_RST=-1  ; RST
-    -D TFT_BCKL=-1 ; Solder the LITE pad to a PWM enabled pin of the ESP.
+    -D TOUCH_DRIVER=0x2046 ;XPT2046
+    -D TFT_SCLK=42 ;36 ;42
+    -D TFT_MISO=21 ;37 ;21
+    -D TFT_MOSI=16 ;35 ;16
+    -D TFT_CS=15
+    -D TFT_BCKL=14
+    -D TFT_RST=13
+    -D TFT_DC=12
+    -D TOUCH_BUSY=11
+    -D SD_CS=10
     -D TOUCH_CS=7
+    -D TOUCH_IRQ=9
     -D TOUCH_SDA=33
     -D TOUCH_SCL=34
-    -D TOUCH_IRQ=8
     -D I2C_TOUCH_PORT=-1
     -D I2C_TOUCH_ADDRESS=-1
     -D I2C_TOUCH_FREQUENCY=-1
 ;endregion
+
+; SCLK = 42
+; MISO = 21
+; MOSI = 16
+; LCD_CS = 15
+; LCD_BL = 14
+; LCD_RST = 13
+
+; LCD_DC=12
+; TP_BUSY=11
+; SD_CS=10
+; TP_IRQ=9
 
 lib_deps =
     ${env.lib_deps}
