Add LV_VDB_SIZE to ini files

--- a/platformio.ini
+++ b/platformio.ini
@@ -79,10 +79,11 @@ lib_deps =
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
     git+https://github.com/lvgl/lvgl.git#release/v7
-    ;git+https://github.com/lvgl/lvgl.git#797212a3f346e9fdf71aef6f193889357eeae3f0
     ;lvgl/lvgl@^7.11.0                ; from PIO library
-    bodmer/TFT_eSPI@^2.3.73
-    ;git+https://github.com/Bodmer/TFT_eSPI.git
+    git+https://github.com/lvgl/lv_lib_png.git#release/v7
+    ;git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
+    ;git+https://github.com/lvgl/lv_lib_gif.git#release/v7
+    ;git+https://github.com/lvgl/lv_lib_split_jpg.git
     ; ------ Unused / Test libraries
     ;https://github.com/netwizeBE/TFT_eSPI.git
     ;Syslog@^2.0.0       ; Obsoleted
