--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -15,6 +15,7 @@ build_flags =
   ;-D LV_LVGL_H_INCLUDE_SIMPLE
   ;-D LV_DRV_NO_CONF
   -D LV_MEM_SIZE=262144U           ; 256kB lvgl memory
+  -D LV_VDB_SIZE=131072U           ; 128kB draw buffer
   -D USE_MONITOR
   -D MONITOR_ZOOM=1  ; can be fractional like 1.5 or 2
   -D USE_MOUSE
