--- a/user_setups/linux_sdl/linux_sdl_64bits.ini
+++ b/user_setups/linux_sdl/linux_sdl_64bits.ini
@@ -14,6 +14,7 @@ build_flags =
   ;-D LV_LVGL_H_INCLUDE_SIMPLE
   ;-D LV_DRV_NO_CONF
   -D LV_MEM_SIZE=262144U           ; 256kB lvgl memory
+  -D LV_VDB_SIZE=131072U           ; 128kB draw buffer
   -D USE_MONITOR
   -D MONITOR_ZOOM=1  ; can be fractional like 1.5 or 2
   -D USE_MOUSE
@@ -64,10 +65,6 @@ lib_deps =
   https://github.com/eclipse/paho.mqtt.c.git
   bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
   https://github.com/fvanroie/lv_drivers
-  git+https://github.com/lvgl/lv_lib_png.git#release/v7
-  ; git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
-  ; git+https://github.com/lvgl/gif.git#release/v7
-  ; git+https://github.com/fvanroie/lv_lib_split_jpg.git
 
 lib_ignore =
   paho
