--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -15,6 +15,7 @@ build_flags =
     ;-D CONFIG_NEWLIB_NANO_FORMAT
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=49152U           ; 48 kB lvgl memory
+    -D LV_VDB_SIZE=32768U              ; 32kB draw buffer
     -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
     -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
     ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
@@ -53,15 +54,13 @@ lib_ignore =
     lv_drv_fsmc_ili9341
     lv_drivers
     AXP192
-    LittleFS_esp32    ; for v2
+    ;LittleFS_esp32    ; for v2
 
 lib_deps =
-    ;ESP Async WebServer
     ;LittleFS_esp32   ; for v1
-    git+https://github.com/lvgl/lv_lib_png.git#release/v7
-    ;git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
-    ;git+https://github.com/lvgl/lv_lib_gif.git#release/v7
-    ;git+https://github.com/lvgl/lv_lib_split_jpg.git
+    bodmer/TFT_eSPI@^2.3.81
+    ;git+https://github.com/Bodmer/TFT_eSPI.git
+    ;ESP Async WebServer
 
 extra_scripts =
     tools/littlefsbuilder.py
