--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -35,6 +35,7 @@ build_flags =
     ;-D CONFIG_NEWLIB_NANO_FORMAT
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=20480U              ; 20kB lvgl memory
+    -D LV_VDB_SIZE=16384U              ; 16kB draw buffer
     -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
     -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
     ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
@@ -74,18 +75,15 @@ lib_ignore =
     lv_drivers
     AXP192
     bodmer/TFT_eSPI
-    LittleFS_esp32
 
 lib_deps =
-    ESP Async WebServer
-    git+https://github.com/lvgl/lv_lib_png.git#release/v7
-    ;git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
-    ;git+https://github.com/lvgl/lv_lib_gif.git#release/v7
-    ;git+https://github.com/lvgl/lv_lib_split_jpg.git
+    bodmer/TFT_eSPI@^2.3.81
+    ;git+https://github.com/Bodmer/TFT_eSPI.git
+    ;ESP Async WebServer
 
 ps_ram =
     -DBOARD_HAS_PSRAM
-;    -mfix-esp32-psram-cache-issue  ; uses 24kB
+    -mfix-esp32-psram-cache-issue  ; uses 24kB
 
 extra_scripts =
     tools/littlefsbuilder.py
