--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -122,7 +122,8 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 [arduino_esp32_v2]
 framework = arduino
 ;platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
-platform                    = https://github.com/platformio/platform-espressif32.git#feature/arduino-idf-master
+;platform                    = https://github.com/platformio/platform-espressif32.git#feature/arduino-idf-master
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2idf/platform-espressif32-2.0.2.zip
 platform_packages           = framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/2.0.1/framework-arduinoespressif32-release_IDF4.4.tar.gz
                               platformio/tool-esptoolpy @ https://github.com/tasmota/esptool/releases/download/v3.2/esptool-v3.2.zip
     ;;framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#mem-optimized
