--- a/user_setups/esp32/d1-r32-waveshare_ili9486.ini
+++ b/user_setups/esp32/d1-r32-waveshare_ili9486.ini
@@ -5,7 +5,7 @@
 ;               - xpt2046 touch controller          ;
 ;***************************************************;
 
-[env:d1-r32-esp32_ili9486]
+[env:d1-r32-waveshare_ili9486]
 extends = esp32_4mb
 board = wemos_d1_mini32
 
