--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -43,7 +43,14 @@ build_flags =
     -D USE_LVGL_FREETYPE_MAX_SIZES=4            ; max number of sizes in cache
     -D USE_LVGL_FREETYPE_MAX_BYTES=16384        ; max bytes in cache
     -D USE_LVGL_FREETYPE_MAX_BYTES_PSRAM=65536  ; max bytes in cache when using PSRAM
-
+; -- SimpleFTpServer build options -----------------
+    -D HASP_USE_FTP=1
+    ;-D FTP_SERVER_DEBUG
+    -D FTP_SERVER_NETWORK_TYPE=4 ;// NETWORK_ESP32
+    -D STORAGE_TYPE=6 ;//  STORAGE_LITTLEFS
+    -D STORAGE_SD_FORCE_DISABLE
+    -D STORAGE_SPIFFS_FORCE_DISABLE
+    
 lib_ignore =
     GxTFT
     XPT2046_Touchscreen
