--- a/user_setups/esp32/az-touch-mod-esp32_ili9341.ini
+++ b/user_setups/esp32/az-touch-mod-esp32_ili9341.ini
@@ -1,19 +1,18 @@
 ;***************************************************;
-;   AZ ArduiTouch PCB with ESP32 with 2.4" or 2.8"  ;
-;               - ESP32-WROOM or WROVER board       ;
+;   AZ-Touch MOD PCB with ESP32 with 2.4" or 2.8"   ;
+;               - ESP32-WROOM or WROVER DevKitC     ;
 ;               - ili9341 TFT                       ;
 ;               - xpt2046 touch controller          ;
 ;***************************************************;
 
-[env:arduitouch-esp32_ili9341]
-extends = esp32_4mb
+[az-touch-mod-esp32_ili9341]
 board = esp32dev
 
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
     ${esp32.ps_ram}
-    -D HASP_MODEL="Arduitouch ESP32"
+    -D HASP_MODEL="AZ-Touch MOD ESP32 DevKitC"
 
     ; -D HASP_USE_MDNS=0  ; saves 32 KiB flash
     ; -D HASP_USE_OTA=0   ; No ArduinoOTA on port 3232
@@ -39,3 +38,9 @@ lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
 ;endregion
+
+[env:az-touch-mod-esp32_ili9341_4MB]
+extends = az-touch-mod-esp32_ili9341, esp32_4mb
+
+[env:az-touch-mod-esp32_ili9341_8MB]
+extends = az-touch-mod-esp32_ili9341, esp32_8mb
