--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,8 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         environment:
-          - env: arduitouch-esp32_ili9341
-            out: arduitouch
+          - out: az-touch
+            env: "az-touch-mod-esp32_ili9341_4MB -e az-touch-mod-esp32_ili9341_8MB"
           - env: d1-mini-esp32_ili9341
             out: d1-mini-esp32
           - env: d1-r32-waveshare_ili9486
@@ -30,10 +30,8 @@ jobs:
             out: esp32-one
           - env: esp32-touchdown
             out: esp32-touchdown
-          - env: freetouchdeck
-            out: freetouchdeck
-          - env: freetouchdeck_8MB
-            out: freetouchdeck
+          - out: freetouchdeck
+            env: "freetouchdeck_4MB -e freetouchdeck_8MB"
           - out: featherwing
             env: "huzzah32-featherwing-24 -e huzzah32-featherwing-35"
           - env: lanbon_l8
@@ -46,10 +44,8 @@ jobs:
             out: makerfabs-tft
           - env: ttgo-t7-v1.5_ili9341
             out: ttgo-t7
-          - env: wt32-sc01
-            out: wt32-sc01
-          - env: wt32-sc01_16MB
-            out: wt32-sc01
+          - out: wt32-sc01
+            env: "wt32-sc01_4MB -e wt32-sc01_16MB"
           - env: yeacreate-nscreen32
             out: yeacreate
 
