Add wt32-86 touchpanel

--- a/user_setups/esp32s2/wt32-86.ini
+++ b/user_setups/esp32s2/wt32-86.ini
@@ -43,14 +43,14 @@ build_flags =
     -D TFT_SCLK=-1
     -D TFT_MISO=-1
     -D TFT_MOSI=-1
-    
     -D SPI_FREQUENCY=40000000
     -D SPI_READ_FREQUENCY=20000000
+
     ;-D USER_SETUP_LOADED=1
     -D LGFX_USE_V1=1
     -D SUPPORT_TRANSACTIONS
     -D SPI_TOUCH_FREQUENCY=2500000
-    -D TOUCH_DRIVER=0x0     ; XPT2046 Resistive SPI touch panel driver
+    -D TOUCH_DRIVER=0x6336     ; XPT2046 Resistive SPI touch panel driver
  
     -D I2C_TOUCH_PORT=0
     -D I2C_TOUCH_ADDRESS=0
@@ -62,6 +62,7 @@ lib_deps =
     ${env.lib_deps}
     ${esp32s2.lib_deps}
     lovyan03/LovyanGFX @ ^0.4.12
+    git+https://github.com/aselectroworks/Arduino-FT6336U.git
 
 lib_ignore =
     ${env.lib_ignore}
