--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -1,12 +1,5 @@
 ; -- Platform specific build flags
 [esp32s2]
-framework = arduino
-#platform = espressif32@^3.3.2
-
-platform  = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
-platform_packages =
-   framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.1
-
 board_build.mcu = esp32s2
 board_build.f_cpu = 240000000L
 board_upload.flash_size=4MB
@@ -17,7 +10,7 @@ board_build.filesystem = littlefs
 ;    data/edit.htm.gz
 
 ; ----- crash reporter
-monitor_filters = esp32s2_exception_decoder
+monitor_filters = esp32_exception_decoder
 
 ; ----- debugger
 ; check_tool = cppcheck
@@ -74,10 +67,9 @@ lib_ignore =
     lv_drv_fsmc_ili9341
     lv_drivers
     AXP192
-    bodmer/TFT_eSPI
 
 lib_deps =
-    bodmer/TFT_eSPI@^2.4.25
+    bodmer/TFT_eSPI@^2.4.32
     ;git+https://github.com/Bodmer/TFT_eSPI.git
     ;ESP Async WebServer
 
@@ -105,14 +97,7 @@ fspi =
 ; -- The Arduino ESP32 v2.0.1 with 3 available flash sizes:
 [arduino_esp32s2_v2]
 framework = arduino
-;platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
-platform                    = https://github.com/platformio/platform-espressif32.git#feature/arduino-idf-master
-platform_packages           = framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/2.0.1/framework-arduinoespressif32-release_IDF4.4.tar.gz
-                              platformio/tool-esptoolpy @ https://github.com/tasmota/esptool/releases/download/v3.2/esptool-v3.2.zip
-    ;;framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#mem-optimized
-    ;framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.1
-    ;;framework-arduinoespressif32 @ https://github.com/marcovannoord/arduino-esp32.git#idf-release/v4.0
-    ;;toolchain-xtensa32 @ 3.80200.200512
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2.2/platform-tasmota-espressif32-2.0.2.zip
 board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
