--- a/platformio.ini
+++ b/platformio.ini
@@ -64,8 +64,9 @@ build_flags =
 
     ; -- Hasp build options ----------------------------
     -D HASP_VER_MAJ=0
-    -D HASP_VER_MIN=7
-    -D HASP_VER_REV=0
+    -D HASP_VER_MIN=6
+    ;-D HASP_VER_REV=3
+    -D HASP_VER_REV=3-dev
     ${override.build_flags}
 
 ; -- Shared library dependencies in all environments
