Set fixed version for TFT_eSPI to 2.4.32

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -43,7 +43,7 @@ build_flags =
     -D USE_LVGL_FREETYPE_MAX_BYTES_PSRAM=65536  ; max bytes in cache when using PSRAM
 ; -- SimpleFTpServer build options -----------------
     -D HASP_USE_FTP=1
-    ;-D FTP_SERVER_DEBUG
+    -D FTP_SERVER_DEBUG
     -D FTP_SERVER_NETWORK_TYPE=4 ;// NETWORK_ESP32
     -D STORAGE_TYPE=6 ;//  STORAGE_LITTLEFS
     -D STORAGE_SD_FORCE_DISABLE
@@ -63,8 +63,7 @@ lib_ignore =
 
 lib_deps =
     ;LittleFS_esp32   ; for v1
-    bodmer/TFT_eSPI@^2.4.32
-    ;git+https://github.com/Bodmer/TFT_eSPI.git
+    bodmer/TFT_eSPI@2.4.32
     ;ESP Async WebServer
 
 extra_scripts =
