--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -69,8 +69,7 @@ lib_ignore =
     AXP192
 
 lib_deps =
-    bodmer/TFT_eSPI@^2.4.32
-    ;git+https://github.com/Bodmer/TFT_eSPI.git
+    bodmer/TFT_eSPI@2.4.32
     ;ESP Async WebServer
 
 ps_ram =
