Tweaks for ESP32-S2 #250

--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -27,9 +27,7 @@ build_flags =
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
     ;-D CONFIG_NEWLIB_NANO_FORMAT
 ; -- lvgl build options -----------------------------
-    -D LV_MEM_SIZE=20480U              ; 20kB lvgl memory
-    -D LV_VDB_SIZE=16384U              ; 16kB draw buffer
-    -D LV_ATTRIBUTE_FAST_MEM=IRAM_ATTR
+    -D LV_ATTRIBUTE_FAST_MEM=       ; smaller RAM doesn't allow for IRAM_ATTR
     -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
     ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
 ; -- ArduinoJson build options ----------------------------
@@ -71,6 +69,7 @@ lib_ignore =
 lib_deps =
     bodmer/TFT_eSPI@2.4.32
     ;ESP Async WebServer
+    git+https://github.com/fvanroie/ConsoleInput.git#dev
 
 ps_ram =
     -DBOARD_HAS_PSRAM
