--- a/user_setups/esp32s2/wt32-86.ini
+++ b/user_setups/esp32s2/wt32-86.ini
@@ -50,7 +50,7 @@ build_flags =
     -D LGFX_USE_V1=1
     -D SUPPORT_TRANSACTIONS
     -D SPI_TOUCH_FREQUENCY=2500000
-    -D TOUCH_DRIVER=0x6336     ; XPT2046 Resistive SPI touch panel driver
+    -D TOUCH_DRIVER=0x1680     ; GLS1680 Capacitive I2C touch panel driver
  
     -D I2C_TOUCH_PORT=0
     -D I2C_TOUCH_ADDRESS=0
@@ -62,7 +62,7 @@ lib_deps =
     ${env.lib_deps}
     ${esp32s2.lib_deps}
     lovyan03/LovyanGFX @ ^0.4.12
-    git+https://github.com/aselectroworks/Arduino-FT6336U.git
+    git+https://github.com/arovak/GSL2038.git
 
 lib_ignore =
     ${env.lib_ignore}
