Add GSL1680 touch driver #250

--- a/platformio.ini
+++ b/platformio.ini
@@ -76,7 +76,7 @@ lib_deps =
     bblanchon/ArduinoJson@^6.19.1    ; Json(l) parser
     bblanchon/StreamUtils@1.6.1      ; for EEPromStream
     knolleary/PubSubClient@^2.8.0    ; MQTT client
-    git+https://github.com/fvanroie/ConsoleInput.git
+    ;git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
     git+https://github.com/lvgl/lvgl.git#release/v7
