--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -65,6 +65,7 @@ lib_deps =
     ;LittleFS_esp32   ; for v1
     bodmer/TFT_eSPI@2.4.32
     ;ESP Async WebServer
+    git+https://github.com/fvanroie/ConsoleInput.git#dev
 
 extra_scripts =
     tools/littlefsbuilder.py
