Set I2C_TOUCH_FREQUENCY

--- a/user_setups/esp32s2/wt32-86.ini
+++ b/user_setups/esp32s2/wt32-86.ini
@@ -54,7 +54,7 @@ build_flags =
  
     -D I2C_TOUCH_PORT=0
     -D I2C_TOUCH_ADDRESS=0
-    -D I2C_TOUCH_FREQUENCY=0
+    -D I2C_TOUCH_FREQUENCY=400000
 ;endregion
 
 ;region -- Library options -------------------------------
