--- a/platformio.ini
+++ b/platformio.ini
@@ -74,7 +74,7 @@ build_flags =
 lib_deps =
     bxparks/AceButton@^1.9.1         ; GPIO button library
     bblanchon/ArduinoJson@^6.19.1    ; Json(l) parser
-    bblanchon/StreamUtils@1.6.1      ; for EEPromStream
+    bblanchon/StreamUtils@^1.6.2     ; for EEPromStream and BufferedTelnetClient
     knolleary/PubSubClient@^2.8.0    ; MQTT client
     ;git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
