Update LovyanGFX driver #250

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,6 +41,7 @@ upload_speed = 921600
 monitor_speed = 115200
 
 build_flags =
+    ;-v     ; verbose
 	-D PIOENV=\"${PIOENV}\"
     -Os          ; Code Size Optimization
     ;-Og           ; Code Debug Optimization
