--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -92,7 +92,7 @@ fspi =
     -D TFT_MOSI=13
     -D TFT_SCLK=14
 
-; -- The Arduino ESP32 v2.0.1 with 3 available flash sizes:
+; -- The Arduino ESP32S2 v2.0.2 with 3 available flash sizes:
 [arduino_esp32s2_v2]
 framework = arduino
 platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2.2/platform-tasmota-espressif32-2.0.2.zip
@@ -104,22 +104,56 @@ board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
 extra_scripts =
-    ${esp32.extra_scripts}
+    ${esp32s2.extra_scripts}
 
 [esp32s2_4mb_v2]
-extends = exp32, arduino_esp32s2_v2
+extends = esp32s2, arduino_esp32s2_v2
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32/partitions_4MB.csv
 
 [esp32s2_8mb_v2]
-extends = exp32, arduino_esp32s2_v2
+extends = esp32s2, arduino_esp32s2_v2
 board_upload.flash_size=8MB
 board_upload.maximum_size = 8388608
 board_build.partitions = user_setups/esp32/partitions_8MB.csv
 
 [esp32s2_16mb_v2]
-extends = exp32, arduino_esp32s2_v2
+extends = esp32s2, arduino_esp32s2_v2
+board_upload.flash_size = 16MB
+board_upload.maximum_size = 16777216
+board_build.partitions = user_setups/esp32/partitions_16MB.csv
+
+; =========================== SOLO ==============================================
+
+; -- The Arduino ESP32S2-solo v2.0.2 with 3 available flash sizes:
+[arduino_esp32s2-solo_v2]
+framework = arduino
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2.2solo1/platform-tasmota-espressif32-2.0.2solo1.zip
+board_build.embed_files =
+    data/edit.htm.gz
+    data/style.css.gz
+    data/script.js.gz
+board_build.filesystem = littlefs
+; ----- crash reporter
+monitor_filters = esp32_exception_decoder
+extra_scripts =
+    ${esp32s2.extra_scripts}
+
+[esp32s2-solo_4mb_v2]
+extends = esp32s2, arduino_esp32s2-solo_v2
+board_upload.flash_size=4MB
+board_upload.maximum_size = 4194304
+board_build.partitions = user_setups/esp32/partitions_4MB.csv
+
+[esp32s2-solo_8mb_v2]
+extends = esp32s2, arduino_esp32s2-solo_v2
+board_upload.flash_size=8MB
+board_upload.maximum_size = 8388608
+board_build.partitions = user_setups/esp32/partitions_8MB.csv
+
+[esp32s2-solo_16mb_v2]
+extends = esp32s2, arduino_esp32s2-solo_v2
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 board_build.partitions = user_setups/esp32/partitions_16MB.csv
