--- a/user_setups/esp32s2/wt-86-32-3zw1_ili9488.ini
+++ b/user_setups/esp32s2/wt-86-32-3zw1_ili9488.ini
@@ -1,11 +1,11 @@
 ;***************************************************;
 ;        Wireless-Tag WT-86-32-3ZW1                 ;
 ;               - custom ESP32-S2 pcb               ;
-;               - ili9488 TFT                       ;
-;               - ft???? touch controller           ;
+;               - ili9488 TFT 8-bit                 ;
+;               - gls1680 touch controller          ;
 ;***************************************************;
 
-[env:wt32-86_ili9488]
+[env:wt-86-32-3zw1_ili9488]
 extends = esp32s2_16mb_v2
 board = esp32s2
 
@@ -18,15 +18,17 @@ build_flags =
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=320
     -D TFT_ROTATION=6 ; Use default, see TFT_ROTATION values
+    -D SPI_FREQUENCY=80000000
+    -D INVERT_COLORS=1
 
-    -D TFT_BCKL=-1  ;None, configurable via web UI (e.g. 2 for D4)
-    -D TFT_CS=-1  ; Chip select control pin, connected to GND
-    -D TFT_DC=38  ; =RS; Data Command control pin - must use a pin in the range 0-31
-    -D TFT_RST=37 ; Reset pin
-    -D TFT_WR=39   ; Write strobe control pin - must use a pin in the range 0-31
-    -D TFT_RD=-1  ; Read pin, pulled-up
-    -D TFT_D0=36  ; Must use pins in the range 0-31 for the data bus
-    -D TFT_D1=35  ; so a single register write sets/clears all bits
+    -D TFT_BCKL=0   ; None, configurable via web UI (e.g. 2 for D4)
+    -D TFT_CS=3     ; Chip select control pin, connected to GND
+    -D TFT_DC=38    ; =RS; Data Command control pin
+    -D TFT_RST=37   ; Reset pin
+    -D TFT_WR=39    ; Write strobe control pin
+    -D TFT_RD=2     ; Read pin, pulled-up
+    -D TFT_D0=36
+    -D TFT_D1=35
     -D TFT_D2=34
     -D TFT_D3=33
     -D TFT_D4=21
@@ -39,13 +41,6 @@ build_flags =
     -D TOUCH_IRQ=13
     -D TOUCH_RST=12
 
-    ; dummy SPI
-    -D TFT_SCLK=-1
-    -D TFT_MISO=-1
-    -D TFT_MOSI=-1
-    -D SPI_FREQUENCY=40000000
-    -D SPI_READ_FREQUENCY=20000000
-
     ;-D USER_SETUP_LOADED=1
     -D LGFX_USE_V1=1
     -D SUPPORT_TRANSACTIONS
@@ -53,7 +48,7 @@ build_flags =
     -D TOUCH_DRIVER=0x1680     ; GLS1680 Capacitive I2C touch panel driver
  
     -D I2C_TOUCH_PORT=0
-    -D I2C_TOUCH_ADDRESS=0
+    -D I2C_TOUCH_ADDRESS=0x40
     -D I2C_TOUCH_FREQUENCY=400000
 ;endregion
 
