--- a/user_setups/esp32s2/wt-86-32-3zw1.ini
+++ b/user_setups/esp32s2/wt-86-32-3zw1.ini
@@ -5,7 +5,7 @@
 ;               - gls1680 touch controller          ;
 ;***************************************************;
 
-[env:wt-86-32-3zw1_ili9488]
+[env:wt-86-32-3zw1]
 extends = esp32s2_16mb_v2
 board = esp32s2
 
@@ -56,7 +56,8 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32s2.lib_deps}
-    lovyan03/LovyanGFX @ ^0.4.12
+    ;lovyan03/LovyanGFX @ ^0.4.14
+    https://github.com/lovyan03/LovyanGFX.git#1be6600
     git+https://github.com/arovak/GSL2038.git
 
 lib_ignore =
