--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -62,7 +62,7 @@ lib_ignore =
     ;LittleFS_esp32    ; for v2
 
 lib_deps =
-    ;LittleFS_esp32   ; for v1
+    lorol/LittleFS_esp32@^1.0.6   ; for v1
     bodmer/TFT_eSPI@2.4.32
     ;ESP Async WebServer
     git+https://github.com/fvanroie/ConsoleInput.git#dev
