Update Arduino to 2.0.2r3

--- a/user_setups/esp32/d1-r32-unoshield_ili9486_adc.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9486_adc.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [env:d1-r32-unoshield_ili9486_adc]
-extends = esp32_4mb
+extends = esp32_4mb_v2
 board = esp32dev
 
 build_flags =
