--- a/user_setups/esp32/freetouchdeck.ini
+++ b/user_setups/esp32/freetouchdeck.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [freetouchdeck]
-board = esp32dev
+board = esp32dev_v2
 
 build_flags =
     ${env.build_flags}
