--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:lanbon_l8]
-extends = esp32_8mb
+extends = esp32_8mb_v2
 board = esp32dev
 
 build_flags =
