--- a/user_setups/esp32s2/s2-mini-esp32s2_ili9341.ini
+++ b/user_setups/esp32s2/s2-mini-esp32s2_ili9341.ini
@@ -7,7 +7,7 @@
 
 [env:s2-mini-esp32s2_ili9341]
 extends = esp32s2_4mb_v2
-board = esp32s2
+board = esp32s2_solo1
 
 build_flags =
     ${env.build_flags}
