--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -59,10 +59,10 @@ lib_ignore =
     lv_drv_fsmc_ili9341
     lv_drivers
     AXP192
-    ;LittleFS_esp32    ; for v2
+    LittleFS_esp32    ; for v2
 
 lib_deps =
-    lorol/LittleFS_esp32@^1.0.6   ; for v1
+    ;lorol/LittleFS_esp32@^1.0.6   ; for v1
     bodmer/TFT_eSPI@2.4.32
     ;ESP Async WebServer
     git+https://github.com/fvanroie/ConsoleInput.git#dev
