--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -73,7 +73,7 @@ lib_deps =
 
 ps_ram =
     -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue  ; uses 24kB
+    ;-mfix-esp32-psram-cache-issue  ; uses 24kB
 
 extra_scripts =
     tools/littlefsbuilder.py
