Update Arduino to 2.0.2r3

--- a/user_setups/esp32/freetouchdeck.ini
+++ b/user_setups/esp32/freetouchdeck.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [freetouchdeck]
-board = esp32dev_v2
+board = esp32dev
 
 build_flags =
     ${env.build_flags}
@@ -50,7 +50,7 @@ lib_ignore =
 ;endregion
 
 [env:freetouchdeck_4MB]
-extends = freetouchdeck, esp32_4mb
+extends = freetouchdeck, esp32_4mb_v2
 
 [env:freetouchdeck_8MB]
-extends = freetouchdeck, esp32_8mb
+extends = freetouchdeck, esp32_8mb_v2
