--- a/user_setups/esp32/yeacreate-nscreen32.ini
+++ b/user_setups/esp32/yeacreate-nscreen32.ini
@@ -17,8 +17,8 @@ build_flags =
     -D HASP_MODEL="YeaCreate Nscreen32"
 
 ;region -- TFT_eSPI build options ------------------------
-    ;-D USER_SETUP_LOADED=1
-    -D LGFX_USE_V1=1
+    -D USER_SETUP_LOADED=1
+    ;-D LGFX_USE_V1=1
     -D ST7796_DRIVER=1
     -D ESP32_PARALLEL=1
     -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
