--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -105,19 +105,19 @@ extra_scripts =
     ${esp32.extra_scripts}
 
 [esp32_4mb]
-extends = exp32, arduino_esp32_v1
+extends = esp32, arduino_esp32_v1
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32/partitions_4MB.csv
 
 [esp32_8mb]
-extends = exp32, arduino_esp32_v1
+extends = esp32, arduino_esp32_v1
 board_upload.flash_size=8MB
 board_upload.maximum_size = 8388608
 board_build.partitions = user_setups/esp32/partitions_8MB.csv
 
 [esp32_16mb]
-extends = exp32, arduino_esp32_v1
+extends = esp32, arduino_esp32_v1
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 board_build.partitions = user_setups/esp32/partitions_16MB.csv
@@ -138,19 +138,19 @@ extra_scripts =
     ${esp32.extra_scripts}
 
 [esp32_4mb_v2]
-extends = exp32, arduino_esp32_v2
+extends = esp32, arduino_esp32_v2
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32/partitions_4MB.csv
 
 [esp32_8mb_v2]
-extends = exp32, arduino_esp32_v2
+extends = esp32, arduino_esp32_v2
 board_upload.flash_size=8MB
 board_upload.maximum_size = 8388608
 board_build.partitions = user_setups/esp32/partitions_8MB.csv
 
 [esp32_16mb_v2]
-extends = exp32, arduino_esp32_v2
+extends = esp32, arduino_esp32_v2
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 board_build.partitions = user_setups/esp32/partitions_16MB.csv
