Fix typo and rename file

--- a/user_setups/esp32/esp32-one.ini
+++ b/user_setups/esp32/esp32-one.ini
@@ -55,11 +55,11 @@ lib_ignore =
 [env:esp32-one_ili9486]
 extends = esp32one
 build_flags =
-    ${esp32-one.build_flags}
+    ${esp32one.build_flags}
     -D ILI9486_DRIVER=1
 
 [env:esp32-one_st7796]
 extends = esp32one
 build_flags =
-    ${esp32-one.build_flags}
+    ${esp32one.build_flags}
     -D ST7796_DRIVER=1
