Update LovyanGFX driver for Lanbon L8 #220

--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -16,8 +16,21 @@ build_flags =
     -D HASP_MODEL="Lanbon L8"
 
 ;region -- TFT_eSPI build options ------------------------
-    ${lcd.st7789v}
     -D LANBONL8
+    ; -D USER_SETUP_LOADED=1
+    -D LGFX_USE_V1=1
+    -D ST7789_DRIVER=1
+    ;-D CGRAM_OFFSET=1         ; Library will add offsets required
+    -D TFT_SDA_READ            ; Read from display, it only provides an SDA pin
+    -D TFT_WIDTH=240
+    -D TFT_HEIGHT=320
+    -D TFT_ROTATION=2          ; see TFT_ROTATION values
+    ; -D TFT_INVERSION_OFF     ; for normal colors
+    ; -D TFT_RGB_ORDER=1       ; Colour order Red-Green-Blue
+    -D TFT_RGB_ORDER=0         ; Colour order Blue-Green-Red
+    -D SPI_FREQUENCY=60000000
+    -D SPI_READ_FREQUENCY=6000000 
+    -D SUPPORT_TRANSACTIONS
     -D TFT_RST=18        ; FCP pin2 RESET
     -D TFT_SCLK=19       ; FCP pin3 SCL
     -D TFT_DC=21         ; FCP pin4 D/C
@@ -44,7 +57,8 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    ${tft_espi.lib_deps}
+    ${lovyangfx.lib_deps}
+    ;${tft_espi.lib_deps}
     ; FT6336U is 6x faster then FocalTech Library
     ;git+https://github.com/lewisxhe/FocalTech_Library.git
     ${ft6336.lib_deps}
