Downgrade TFT_eSPI to 2.4.42

--- a/platformio.ini
+++ b/platformio.ini
@@ -68,6 +68,7 @@ build_flags =
     -D HASP_VER_MIN=6
     ;-D HASP_VER_REV=3
     -D HASP_VER_REV=3-dev
+    -D HASP_LOG_LEVEL=7
     ${override.build_flags}
 
 ; -- Shared library dependencies in all environments
@@ -102,7 +103,7 @@ lib_deps =
 
 [tft_espi]
 lib_deps =
-    bodmer/TFT_eSPI @ 2.4.43
+    bodmer/TFT_eSPI @ 2.4.42
 
 [goodix]
 lib_deps =
