--- a/user_setups/esp32/d1-r32-unoshield_ili9341_adc.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9341_adc.ini
@@ -12,6 +12,7 @@ build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
     ${esp32.no_ps_ram}
+    -D HASP_USE_OTA=0   ; No ArduinoOTA on port 3232
 
 ;region -- TFT_eSPI build options ------------------------
     ${esp32.vspi}        ; Use VSPI hardware SPI bus
@@ -51,13 +52,13 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    bodmer/TFT_eSPI @ 2.4.32
+    ; bodmer/TFT_eSPI @ 2.4.32
     ; ${tft_espi.lib_deps}
-    ; https://github.com/lovyan03/LovyanGFX.git#1be6600
-    lorol/LittleFS_esp32@^1.0.6   ; for v1
+    ; lorol/LittleFS_esp32@^1.0.6   ; for v1
+    ${lovyangfx.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
     ;${esp32.lib_ignore}
-    ; TFT_eSPI
+    TFT_eSPI
 ;endregion
