Use Arduino core v2

--- a/user_setups/esp32/d1-r32-unoshield_ili9486_adc.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9486_adc.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [env:d1-r32-unoshield_ili9486_adc]
-extends = esp32_4mb
+extends = esp32_4mb_v2
 board = esp32dev
 
 build_flags =
@@ -15,7 +15,8 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     ${esp32.vspi}        ; Use VSPI hardware SPI bus
-    -D USER_SETUP_LOADED=1
+    ;-D USER_SETUP_LOADED=1
+    -D LGFX_USE_V1=1
     -D ILI9486_DRIVER=1 ;3.5inch Arduino Display-UNO
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
@@ -50,13 +51,13 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    bodmer/TFT_eSPI @ 2.4.32
+    ; bodmer/TFT_eSPI @ 2.4.32
     ; ${tft_espi.lib_deps}
-    ; https://github.com/lovyan03/LovyanGFX.git#1be6600
-    lorol/LittleFS_esp32@^1.0.6   ; for v1
+    ; lorol/LittleFS_esp32@^1.0.6   ; for v1
+    ${lovyangfx.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
     ;${esp32.lib_ignore}
-    ; TFT_eSPI
+    TFT_eSPI
 ;endregion
