--- a/user_setups/esp32/d1-r32-unoshield_ili9341_adc.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9341_adc.ini
@@ -5,14 +5,13 @@
 ;***************************************************;
 
 [env:d1-r32-unoshield_ili9341_adc]
-extends = esp32_4mb
+extends = esp32_4mb_v2
 board = esp32dev
 
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
     ${esp32.no_ps_ram}
-    -D HASP_USE_OTA=0   ; No ArduinoOTA on port 3232
 
 ;region -- TFT_eSPI build options ------------------------
     ${esp32.vspi}        ; Use VSPI hardware SPI bus
@@ -59,6 +58,6 @@ lib_deps =
 
 lib_ignore =
     ${env.lib_ignore}
-    ;${esp32.lib_ignore}
+    ${esp32.lib_ignore}
     TFT_eSPI
 ;endregion
