Use LovyanGFX driver

--- a/user_setups/esp32/d1-r32-unoshield_ili9341_adc.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9341_adc.ini
@@ -15,7 +15,8 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     ${esp32.vspi}        ; Use VSPI hardware SPI bus
-    -D USER_SETUP_LOADED=1
+    ;-D USER_SETUP_LOADED=1
+    -D LGFX_USE_V1=1
     -D ILI9341_DRIVER=1
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
