--- a/platformio.ini
+++ b/platformio.ini
@@ -74,8 +74,8 @@ build_flags =
 ; -- Shared library dependencies in all environments
 ; Warning : don't put comments after github links => causes infinite download loop
 lib_deps =
-    bxparks/AceButton@^1.9.1         ; GPIO button library
-    bblanchon/ArduinoJson@^6.19.3    ; Json(l) parser
+    bxparks/AceButton@^1.9.2         ; GPIO button library
+    bblanchon/ArduinoJson@^6.19..4    ; Json(l) parser
     bblanchon/StreamUtils@^1.6.2     ; for EEPromStream and BufferedTelnetClient
     knolleary/PubSubClient@^2.8.0    ; MQTT client
     ;git+https://github.com/fvanroie/ConsoleInput.git
@@ -99,11 +99,11 @@ src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font
 
 [lovyangfx]
 lib_deps =
-    lovyan03/LovyanGFX @ ^0.4.15
+    lovyan03/LovyanGFX@^0.4.15
 
 [tft_espi]
 lib_deps =
-    bodmer/TFT_eSPI @ 2.4.42
+    bodmer/TFT_eSPI@2.4.42
 
 [goodix]
 lib_deps =
@@ -119,4 +119,4 @@ lib_deps =
 
 [stmpe610]
 lib_deps =
-    adafruit/Adafruit STMPE610 @ ^1.1.4
+    adafruit/Adafruit STMPE610@^1.1.4
