--- a/platformio.ini
+++ b/platformio.ini
@@ -75,7 +75,7 @@ build_flags =
 ; Warning : don't put comments after github links => causes infinite download loop
 lib_deps =
     bxparks/AceButton@^1.9.2         ; GPIO button library
-    bblanchon/ArduinoJson@^6.19..4    ; Json(l) parser
+    bblanchon/ArduinoJson@^6.19.4    ; Json(l) parser
     bblanchon/StreamUtils@^1.6.2     ; for EEPromStream and BufferedTelnetClient
     knolleary/PubSubClient@^2.8.0    ; MQTT client
     ;git+https://github.com/fvanroie/ConsoleInput.git
