--- a/platformio.ini
+++ b/platformio.ini
@@ -64,6 +64,7 @@ build_flags =
     -D STREAMUTILS_ENABLE_EEPROM=1  ; for STM32, it also supports EEPROM
 
     ; -- Hasp build options ----------------------------
+    -D HASP_USE_FREETYPE=1
     -D HASP_VER_MAJ=0
     -D HASP_VER_MIN=6
     ;-D HASP_VER_REV=3
