Revert to Arduino v1.0.6

--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:lanbon_l8]
-extends = esp32_8mb_v2
+extends = esp32_8mb
 board = esp32dev
 
 build_flags =
@@ -62,10 +62,9 @@ lib_deps =
     ; FT6336U is 6x faster then FocalTech Library
     ;git+https://github.com/lewisxhe/FocalTech_Library.git
     ${ft6336.lib_deps}
+    lorol/LittleFS_esp32@^1.0.6   ; for v1
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
-    ESP32 BLE Arduino
-    LittleFS_esp32
 ;endregion
