Split lip_deps and lib_ignore into v1 and v2

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -54,15 +54,13 @@ lib_ignore =
     XPT2046_Touchscreen
     Adafruit BusIO
     Adafruit GFX Library
+    ESP32 BLE Arduino
     sstaub/Ticker
     lv_drv_fsmc_ili9341
     lv_drivers
     AXP192
-    LittleFS_esp32    ; for v2
 
 lib_deps =
-    ;lorol/LittleFS_esp32@^1.0.6   ; for v1
-    ${tft_espi.lib_deps}
     git+https://github.com/fvanroie/ConsoleInput.git#dev
 
 extra_scripts =
@@ -102,6 +100,8 @@ board_build.filesystem = littlefs
 monitor_filters = esp32_exception_decoder
 extra_scripts =
     ${esp32.extra_scripts}
+lib_deps = lorol/LittleFS_esp32@^1.0.6   ; for v1
+lib_ignore =
 
 [esp32_4mb]
 extends = esp32, arduino_esp32_v1
@@ -135,6 +135,8 @@ board_build.filesystem = littlefs
 monitor_filters = esp32_exception_decoder
 extra_scripts =
     ${esp32.extra_scripts}
+lib_deps =
+lib_ignore = LittleFS_esp32    ; for v2
 
 [esp32_4mb_v2]
 extends = esp32, arduino_esp32_v2
