--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -57,14 +57,15 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    ${arduino_esp32_v1.lib_deps}
     ${lovyangfx.lib_deps}
     ;${tft_espi.lib_deps}
     ; FT6336U is 6x faster then FocalTech Library
     ;git+https://github.com/lewisxhe/FocalTech_Library.git
     ${ft6336.lib_deps}
-    lorol/LittleFS_esp32@^1.0.6   ; for v1
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+    ${arduino_esp32_v1.lib_ignore}
 ;endregion
