--- a/user_setups/esp32/d1-r32-unoshield_ili9341_adc.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9341_adc.ini
@@ -52,13 +52,12 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    ; bodmer/TFT_eSPI @ 2.4.32
+    ${arduino_esp32_v2.lib_deps}
     ; ${tft_espi.lib_deps}
-    ; lorol/LittleFS_esp32@^1.0.6   ; for v1
     ${lovyangfx.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
-    TFT_eSPI
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
