--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -39,12 +39,15 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
+    ; ${lovyangfx.lib_deps}
     ${ft6336.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
 
 [env:wt32-sc01_4MB]
