Set USE_LVGL_FREETYPE_MAX_BYTES_PSRAM to 128KB

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -40,7 +40,7 @@ build_flags =
     -D USE_LVGL_FREETYPE_MAX_FACES=64           ; max number of FreeType faces in cache
     -D USE_LVGL_FREETYPE_MAX_SIZES=4            ; max number of sizes in cache
     -D USE_LVGL_FREETYPE_MAX_BYTES=16384        ; max bytes in cache
-    -D USE_LVGL_FREETYPE_MAX_BYTES_PSRAM=65536  ; max bytes in cache when using PSRAM
+    -D USE_LVGL_FREETYPE_MAX_BYTES_PSRAM=131072 ; max bytes in cache when using PSRAM
 ; -- SimpleFTpServer build options -----------------
     -D HASP_USE_FTP=1
     -D FTP_SERVER_DEBUG
@@ -125,7 +125,8 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32_v2]
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.3rc1/platform-espressif32-2.0.3.zip
+platform = https://github.com/tasmota/platform-espressif32
+platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.3-RC1
 board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
