Revert to Arduino v1

--- a/user_setups/esp32/makerfabs-tft35-cap.ini
+++ b/user_setups/esp32/makerfabs-tft35-cap.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [env:makerfabs-tft35-cap]
-extends = esp32_16mb_v2
+extends = esp32_16mb
 board = esp32dev
 
 build_flags =
