--- a/user_setups/esp32/az-touch-mod-esp32_ili9341.ini
+++ b/user_setups/esp32/az-touch-mod-esp32_ili9341.ini
@@ -43,7 +43,7 @@ lib_ignore =
 ;endregion
 
 [env:az-touch-mod-esp32_ili9341_4MB]
-extends = az-touch-mod-esp32_ili9341, esp32_4mb_v2
+extends = az-touch-mod-esp32_ili9341, esp32_4mb
 
 [env:az-touch-mod-esp32_ili9341_8MB]
-extends = az-touch-mod-esp32_ili9341, esp32_8mb_v2
+extends = az-touch-mod-esp32_ili9341, esp32_8mb
