--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:d1-mini-esp32_ili9341]
-extends = esp32_4mb_v2
+extends = esp32_4mb
 board = wemos_d1_mini32
 
 build_flags =
