--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -139,19 +139,19 @@ extra_scripts =
 lib_deps =
 lib_ignore = LittleFS_esp32    ; for v2
 
-[esp32_4mb]
+[esp32_4mb_v2]
 extends = esp32, arduino_esp32_v2
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32/partitions_4MB.csv
 
-[esp32_8mb]
+[esp32_8mb_v2]
 extends = esp32, arduino_esp32_v2
 board_upload.flash_size=8MB
 board_upload.maximum_size = 8388608
 board_build.partitions = user_setups/esp32/partitions_8MB.csv
 
-[esp32_16mb]
+[esp32_16mb_v2]
 extends = esp32, arduino_esp32_v2
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
