--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -62,6 +62,7 @@ lib_ignore =
 
 lib_deps =
     git+https://github.com/fvanroie/ConsoleInput.git#dev
+    lorol/LittleFS_esp32@^1.0.6   ; for v1
 
 extra_scripts =
     pre:tools/auto_firmware_version.py
