Fix for PWM issue

--- a/user_setups/esp32/freetouchdeck.ini
+++ b/user_setups/esp32/freetouchdeck.ini
@@ -13,7 +13,7 @@ build_flags =
     -D HASP_MODEL="FreeTouchDeck"
     -DBOARD_HAS_PSRAM               ; uses 78kB
     ;-mfix-esp32-psram-cache-issue  ; uses 24kB
- 
+
 ;region -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
     ;-D LGFX_USE_V1=1
@@ -43,18 +43,18 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    ${arduino_esp32_v1.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
-    ${arduino_esp32_v1.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
 
 
 [env:freetouchdeck_4MB]
-extends = freetouchdeck, esp32_4mb
+extends = freetouchdeck, esp32_4mb_v2
 
 [env:freetouchdeck_8MB]
-extends = freetouchdeck, esp32_8mb
+extends = freetouchdeck, esp32_8mb_v2
