--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -94,7 +94,7 @@ fspi =
 ; -- The Arduino ESP32S2 v2.0.2 with 3 available flash sizes:
 [arduino_esp32s2_v2]
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.3rc1/platform-espressif32-2.0.3.zip
+platform = https://github.com/tasmota/platform-espressif32
 board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
