--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -51,7 +51,7 @@ lib_ignore =
 ;endregion
 
 [env:wt32-sc01_4MB]
-extends = wt32-sc01, esp32_4mb
+extends = wt32-sc01, esp32s2_4mb_v2
 
 [env:wt32-sc01_16MB]
-extends = wt32-sc01, esp32_16mb
+extends = wt32-sc01, esp32s2_16mb_v2
