Upgrade to Arduino v2.0.3-RC1

--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:lanbon_l8]
-extends = esp32_8mb
+extends = esp32_8mb_v2
 board = esp32dev
 
 build_flags =
@@ -57,7 +57,7 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    ${arduino_esp32_v1.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${lovyangfx.lib_deps}
     ;${tft_espi.lib_deps}
     ; FT6336U is 6x faster then FocalTech Library
@@ -67,5 +67,5 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
-    ${arduino_esp32_v1.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
