--- a/user_setups/esp32/d1-r32-unoshield_ili9486_adc.ini
+++ b/user_setups/esp32/d1-r32-unoshield_ili9486_adc.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [env:d1-r32-unoshield_ili9486_adc]
-extends = esp32_4mb
+extends = esp32_4mb_v2
 board = esp32dev
 
 build_flags =
@@ -51,12 +51,12 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    ${arduino_esp32_v1.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ; ${tft_espi.lib_deps}
     ${lovyangfx.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
-    ${arduino_esp32_v1.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
