--- a/user_setups/esp32/esp32-one.ini
+++ b/user_setups/esp32/esp32-one.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [esp32one]
-extends = esp32_4mb
+extends = esp32_4mb_v2
 board = esp32dev
 
 build_flags =
