Fix Arduino v2.0.3-RC1 dependencies

--- a/user_setups/esp32/huzzah32-featherwing-35.ini
+++ b/user_setups/esp32/huzzah32-featherwing-35.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:huzzah32-featherwing-35]
-extends = esp32_4mb
+extends = esp32_4mb_v2
 board = featheresp32
 
 build_flags =
@@ -31,9 +31,11 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
     ${stmpe610.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
