--- a/user_setups/esp32/az-touch-mod-esp32_ili9341.ini
+++ b/user_setups/esp32/az-touch-mod-esp32_ili9341.ini
@@ -33,17 +33,17 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    ${arduino_esp32_v1.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
-    ${arduino_esp32_v1.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
 
 [env:az-touch-mod-esp32_ili9341_4MB]
-extends = az-touch-mod-esp32_ili9341, esp32_4mb
+extends = az-touch-mod-esp32_ili9341, esp32_4mb_v2
 
 [env:az-touch-mod-esp32_ili9341_8MB]
-extends = az-touch-mod-esp32_ili9341, esp32_8mb
+extends = az-touch-mod-esp32_ili9341, esp32_8mb_v2
