LV_MEM_SIZE adjustment for WirelessTag

--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -33,6 +33,7 @@ build_flags =
     -D TOUCH_RST=-1   ; not used, connected to 3.3V
     -D I2C_TOUCH_FREQUENCY=400000
     -D I2C_TOUCH_ADDRESS=0x38
+    -D LV_MEM_SIZE=60416U
 ;endregion
 
 ;region -- Library options -------------------------------
