Move HASP_USE_FREETYPE define

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -36,6 +36,7 @@ build_flags =
 ; -- LittleFS build options ------------------------
 	;-D CONFIG_LITTLEFS_FOR_IDF_3_2  ; obsolete in IDF 3.3
 ; -- FreeType build options ------------------------
+    -D HASP_USE_FREETYPE=1
     -D LV_USE_FT_CACHE_MANAGER=1            ; crashes without cache
     -D LVGL_FREETYPE_MAX_FACES=64           ; max number of FreeType faces in cache
     -D LVGL_FREETYPE_MAX_SIZES=4            ; max number of sizes in cache
