Tweak LVGL_FREETYPE_MAX_FACES and LVGL_FREETYPE_MAX_SIZES

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -38,10 +38,11 @@ build_flags =
 ; -- FreeType build options ------------------------
     -D HASP_USE_FREETYPE=1
     -D LV_USE_FT_CACHE_MANAGER=1            ; crashes without cache
-    -D LVGL_FREETYPE_MAX_FACES=64           ; max number of FreeType faces in cache
-    -D LVGL_FREETYPE_MAX_SIZES=4            ; max number of sizes in cache
+    -D LVGL_FREETYPE_MAX_FACES=16           ; max number of FreeType faces in cache
+    -D LVGL_FREETYPE_MAX_SIZES=16           ; max number of sizes in cache
     -D LVGL_FREETYPE_MAX_BYTES=16384        ; max bytes in cache
     -D LVGL_FREETYPE_MAX_BYTES_PSRAM=131072 ; max bytes in cache when using PSRAM
+    -D FT_DEBUG_MEMORY
 ; -- SimpleFTpServer build options -----------------
     -D HASP_USE_FTP=1
     -D FTP_SERVER_DEBUG
