--- a/user_setups/esp32/ttgo-lilygo-pi_ili9481.ini
+++ b/user_setups/esp32/ttgo-lilygo-pi_ili9481.ini
@@ -6,12 +6,8 @@
 ;***************************************************;
 
 [env:ttgo-lilygo-pi_ili9481]
-extends = esp32_16mb
+extends = esp32_16mb_v2
 board = esp32dev
-
-#platform  = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
-#platform_packages =
-#   framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.0
 
 build_flags =
     ${env.build_flags}
@@ -55,12 +51,12 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${lovyangfx.lib_deps}
     ${goodix.lib_deps}
-    adafruit/Adafruit GFX Library @ ^1.10.3
-    adafruit/Adafruit BusIO @ ^1.6.0
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
