--- a/user_setups/esp32/ttgo-lilygo-pi_st7796.ini
+++ b/user_setups/esp32/ttgo-lilygo-pi_st7796.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:ttgo-lilygo-pi_st7796]
-extends = esp32_16mb
+extends = esp32_16mb_v2
 board = esp32dev
 
 build_flags =
@@ -49,12 +49,12 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${lovyangfx.lib_deps}
     ${ft6336.lib_deps}
-    adafruit/Adafruit GFX Library @ ^1.10.3
-    adafruit/Adafruit BusIO @ ^1.6.0
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
