Firmware Upgrade From URL #300

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -5,7 +5,11 @@ check_tool = cppcheck
 check_flags = --enable=all
 debug_tool = esp-prog
 debug_init_break = tbreak setup
-
+board_build.embed_files =
+    data/edit.htm.gz
+    data/style.css.gz
+    data/script.js.gz
+    data/cert/x509_crt_bundle.bin
 build_flags =
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
@@ -93,10 +97,6 @@ hspi =
 [arduino_esp32_v1]
 framework = arduino
 platform = espressif32@^3.5.0
-board_build.embed_files =
-    data/edit.htm.gz
-    data/style.css.gz
-    data/script.js.gz
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
@@ -128,10 +128,6 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 [arduino_esp32_v2]
 framework = arduino
 platform = https://github.com/tasmota/platform-espressif32
-board_build.embed_files =
-    data/edit.htm.gz
-    data/style.css.gz
-    data/script.js.gz
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
