--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -6,8 +6,6 @@ board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32s2/no_ota.csv
 board_build.filesystem = littlefs
-;board_build.embed_files =
-;    data/edit.htm.gz
 
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
@@ -100,6 +98,7 @@ board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
     data/script.js.gz
+    data/cert/x509_crt_bundle.bin
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
@@ -134,6 +133,7 @@ board_build.embed_files =
     data/edit.htm.gz
     data/style.css.gz
     data/script.js.gz
+    data/cert/x509_crt_bundle.bin
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
