--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ data/*
 !data/style.css.gz
 !data/script.js
 !data/script.js.gz
+!data/cert/x509_crt_bundle.bin
 src/user_setups/active/*
 include/user_config_override.h
 src/user_config_override.h
