Moved to Arduino v2

--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -8,7 +8,7 @@
 ; !! This board already defines TFT_CS, TFT_DC and TFT_RST !!
 
 [env:lolin-d32-pro_ili9341]
-extends = esp32_16mb
+extends = esp32_16mb_v2
 board = lolin_d32_pro
 
 build_flags =
@@ -33,9 +33,11 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
