--- a/user_setups/esp32/m5stack_core2.ini
+++ b/user_setups/esp32/m5stack_core2.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:m5stack-core2]
-extends = esp32_16mb
+extends = esp32_16mb_v2
 board = esp32dev
 
 build_flags =
@@ -36,17 +36,13 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
     ${ft6336.lib_deps}
     https://github.com/fvanroie/M5Core2.git#AXP192
 
 lib_ignore =
     ${env.lib_ignore}
-    GxTFT
-    XPT2046_Touchscreen
-    Adafruit BusIO
-    Adafruit GFX Library
-    sstaub/Ticker
-    lv_drv_fsmc_ili9341
-    lv_drivers
+    ${esp32.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
