--- a/user_setups/esp32/makerfabs-tft35-cap.ini
+++ b/user_setups/esp32/makerfabs-tft35-cap.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [env:makerfabs-tft35-cap]
-extends = esp32_16mb
+extends = esp32_16mb_v2
 board = esp32dev
 
 build_flags =
@@ -40,16 +40,12 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
     ${ft6336.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
-    GxTFT
-    XPT2046_Touchscreen
-    Adafruit BusIO
-    Adafruit GFX Library
-    sstaub/Ticker
-    lv_drv_fsmc_ili9341
-    lv_drivers
+    ${esp32.lib_ignore}
+    ${arduino_esp32_v2.lib_ignore}
 ;endregion
